--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HSL-RGB Playground | Omran Jamal</title>
-    <script type="module" crossorigin src="./assets/index.edeff469.js"></script>
+    <script type="module" crossorigin src="./assets/index.738c9d06.js"></script>
     <link rel="stylesheet" href="./assets/index.3fce1f81.css">
   </head>
   <body>
